[package]
name = "termviz"
version = "0.1.0"
authors = ["Carsten Zumsande <termviz@zumsande.eu>"]
edition = "2018"
license = "MIT"
exclude = ["assets/*", ".github"]


[dependencies]
approx = "0.5.1"
byteorder = "*"
chrono = "0.2.25"
clap = "*"
image = "*"
colorgrad = "*"
nalgebra = ">=0.29.0"
rosrust = "0.9"
rosrust_msg = "0.1"
rustros_tf = { git = "https://github.com/maximaerz/rustros_tf" }
tui-image = { git = "https://github.com/carzum/tui-image" }
serde = { version = "*", features = ["derive"] }
serde_derive = "*"
termion = "1.5"
timer = "0.1.6"
tui = "0.16.0"
strum = "0.23"
strum_macros = "0.23"

[dependencies.confy]
confy = "0.5.0"
features = ["yaml_conf"]
default-features = false
