[package]
name = "termviz"
version = "0.1.1"
authors = ["Carsten Zumsande <termviz@zumsande.eu>", "Emanuele Palazzolo <emanuele.palazzolo@gmail.com>", "Michael Maerz <michael0maerz@gmail.com>"]
edition = "2018"
license = "MIT"
exclude = ["assets/*", ".github"]
description = "ROS visualization on the terminal"

[features]
default = []
ros1 = ["dep:rosrust", "dep:rosrust_msg", "dep:rustros_tf"]
# ROS 2 backend via `r2r` (rosidl-generated messages).
ros2 = ["dep:r2r"]

[dependencies]
approx = "0.5.1"
byteorder = "1.5.0"
chrono = "0.2.25"
clap = "4.5.29"
colored = "2.2.0"
colorgrad = "0.7.0"
crossterm = { version = '0.23', features = ["event-stream"] }
dialoguer = "0.11.0"
futures = "0.3"
futures-timer = "3.0"
image = "0.24"  # TODO: tui-image (see below) doesn't allow newer versions.
indexmap = "=2.11.0"
nalgebra = ">=0.29.0"
rand = "0.8.5"
serde = { version = "1.0.217", features = ["derive"] }
serde_derive = "1.0.217"
strum = "0.23"
strum_macros = "0.23"
timer = "0.1.6"
tokio = { version = "1.16", features = ["full"] }
tui = "0.18.0"
tui-image = { git = "https://github.com/arraypad/tui-image", version = "*" }

[dependencies.rosrust]
version = "0.9.11"
optional = true

[dependencies.rosrust_msg]
version = "0.1.7"
optional = true

[dependencies.rustros_tf]
git = "https://github.com/Magazino/rustros_tf"
optional = true

[dependencies.r2r]
version = "0.9"
optional = true

[dependencies.confy]
version = "0.5.0"
features = ["yaml_conf"]
default-features = false

[dev-dependencies]
assert_cmd = "2.0.16"
predicates = "3.1.3"
tempfile = "3.15.0"
wait-timeout = "0.2.0"
portable-pty = "0.8.1"
serial_test = "3.2.0"

# generated by 'cargo dist init'
[profile.dist]
inherits = "release"
debug = true
split-debuginfo = "packed"

[patch.crates-io]
traitobject = { path = "vendor/traitobject" }

