<?xml version="1.0"?>
<package format="2">
    <name>termviz</name>
    <version>0.1.0</version>
    <description>Terminal RVIZ</description>

    <author email="termviz@zumsande.eu">Carsten Zumsande</author>
    <maintainer email="termviz@zumsande.eu">Carsten Zumsande</maintainer>
    <maintainer email="emanuele.palazzolo@gmail.com">Emanuele Palazzolo</maintainer>
    <maintainer email="michael0maerz@gmail.com">Michael Maerz</maintainer>
    <url type="repository">https://github.com/carzum/termviz</url>
    <license>MIT</license>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>visualization_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>nav_msgs</build_depend>
    <build_depend>tf2_msgs</build_depend>
    <build_depend>cargo</build_depend>
</package>
